# ficherors

./: .gitignore  Cargo.toml  README.md  Xmb.txt  escreve  phone.json
src/: countries.rs  csv_core.rs  excel_core.rs  functions.rs  libi.rs  main.rs  phone.rs
tests/test_files/: valid_w_accent.txt  valid_w_spaces.txt
