[package]
name = "ficherors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
chrono = "0.4.41"
regex = "1.10.6"
rand = "0.9.2"
calamine = "0.30"
anyhow = "1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
# pedantic = "deny"
nursery = "deny"
# unwrap_used = "deny"