[package]
name = "ficherors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.4.0"
chrono = "0.4.44"
regex = "1.12.3"
rand = "0.10"
calamine = "0.34"
anyhow = "1.0.102"
unidecode = "0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "deny"
# pedantic = "deny"
# nursery = "deny"